--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -7,13 +7,13 @@
     </style>
 
     <style name="Widget.baemin.Toolbar.WithArrow" parent="Widget.baemin.Toolbar">
-        <item name="android:navigationIcon">@drawable/ic_back_arrow</item>
-        <item name="android:title">@null</item>
+        <item name="navigationIcon">@drawable/ic_back_arrow</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="Widget.baemin.Toolbar.WithClose" parent="Widget.baemin.Toolbar">
-        <item name="android:navigationIcon">@drawable/ic_close</item>
-        <item name="android:title">@null</item>
+        <item name="navigationIcon">@drawable/ic_close</item>
+        <item name="android:background">@color/white</item>
     </style>
 
     <style name="Widget.baemin.Chip" parent="Widget.MaterialComponents.Chip.Choice">
