--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -72,7 +72,7 @@
         app:layout_constraintTop_toBottomOf="@id/tabLayout">
 
         <com.google.android.material.chip.ChipGroup
-            android:id="@+id/filterChipGroup"
+            android:id="@+id/orderChipGroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:paddingHorizontal="12dp"
@@ -91,8 +91,9 @@
                 android:layout_height="wrap_content"
                 android:text="@string/initialize"
                 android:visibility="gone"
+                tools:visibility="visible"
                 app:chipIconEnabled="true"
-                app:chipIconTint="@color/icon_filter_chip_state_list" />
+                app:chipIconTint="@color/icon_filter_chip_state_list_reset" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipFastDelivery"
@@ -101,7 +102,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/fast_delivery"
                 app:chipIconEnabled="true"
-                app:chipIconTint="@color/icon_filter_chip_state_list" />
+                app:chipIcon="@drawable/ic_thunder"
+                app:chipIconTint="@color/icon_filter_chip_state_list_delivery_fast" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipLowDeliveryTip"
@@ -110,7 +112,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/low_delivery_tip"
                 app:chipIconEnabled="true"
-                app:chipIconTint="@color/icon_filter_chip_state_list" />
+                app:chipIcon="@drawable/ic_down"
+                app:chipIconTint="@color/icon_filter_chip_state_list_delivery_tip" />
 
             <com.google.android.material.chip.Chip
                 android:id="@+id/chipDefault"
@@ -127,6 +130,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/top_rate"
+                app:chipIcon="@drawable/ic_star"
                 app:chipIconEnabled="true"
                 app:chipIconTint="@color/icon_filter_chip_state_list" />
         </com.google.android.material.chip.ChipGroup>
