--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,9 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="black_24">#3D000000</color>
     <color name="gray_168">#A8A8A8</color>
-
+    <color name="gray_cc">#ececec</color>
     <color name="orange_yellow">#FFCA42</color>
+    <color name="orange">#f27f35</color>
     <color name="brown">#914300</color>
 </resources>
